--- a/moodflow/package.json
+++ b/moodflow/package.json
@@ -19,8 +19,8 @@
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "node-telegram-bot-api": "^0.66.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.66.0",
     "stripe": "^19.2.0",
     "swr": "^2.3.6",
