fix: исправление TypeScript ошибки в analytics API для деплоя на Vercel
- Исправлена ошибка типа is_final в /api/analytics
- Добавлено явное приведение типа для maybeSingle()
- Добавлены миграции для админ панели и аналитики
- Добавлены документация и SQL скрипты
- Обновлены компоненты админ панели
- Build проходит успешно локально

--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
     {
       "path": "/api/cron/weekly-summaries",
       "schedule": "0 23 * * 0"
+    },
+    {
+      "path": "/api/cron/monthly-analytics",
+      "schedule": "0 22 * * *"
     }
   ]
 }
