--- a/package.json
+++ b/package.json
@@ -19,11 +19,10 @@
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "node-telegram-bot-api": "^0.66.0",
-    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.66.0",
-    "react-quill": "^2.0.0",
+    "react-quill-new": "^3.6.0",
     "stripe": "^19.2.0",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
